# junkbox

./: .gitignore  README.md
aws/cloudformation/example/: README.md  security-group-example.yml
aws/cloudformation/s3/: README.md  example.yml
aws/lambda/s3/: diff_s3.py  get_s3.py
deno/simple-server/: main.ts  tsconfig.json
go/server/simple-server/: main.go
nginx/default/: README.md  docker-compose.yml
nginx/default/nginx/: Dockerfile
nginx/flask/: docker-compose.yml
nginx/flask/App/: Dockerfile  app.py  uwsgi.ini
nginx/flask/nginx/: Dockerfile  nginx.conf
python/concurrent/: example.py
python/shell/: main.py
python/url-request/: main.py
rust/examples/associated_type/: Cargo.toml
rust/examples/asyncawait/: Cargo.toml
rust/examples/bitonic-sorter/: Cargo.toml
rust/examples/c-api/: Cargo.toml  a.out  main.c
rust/examples/cffi-ownership/: Cargo.toml  build.rs
rust/examples/cfii/: Cargo.toml
rust/examples/closure/: Cargo.toml
rust/examples/dispatch/: Cargo.toml
rust/examples/global-cfii/: Cargo.toml
rust/examples/grep/: Cargo.toml
rust/examples/grep/grep-cli/: Cargo.toml
rust/examples/grep/grep-cli/src/: main.rs
rust/examples/impl_trait/: Cargo.toml
rust/examples/lazy_static/: Cargo.toml
rust/examples/leap-year/: Cargo.toml
rust/examples/lightweight-webserver/: Cargo.toml
rust/examples/lightweight-webserver/src/: main.rs
rust/examples/lightweight-webserver/webroot/: index.html
rust/examples/log-collector/: test.csv
rust/examples/port-scanner/: .env  Cargo.toml
rust/examples/port-scanner/src/: main.rs
(+71 files in other folders)
