[package]
name = "lightweight-webserver"
version = "0.1.0"
authors = ["coil398 <konayuta.sou@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "0.7.0", features = ["os-poll", "tcp"]}
regex = "1.3.9"
log = "0.4.8"
env_logger = "0.7.1"
failure = "0.1.8"
