[package]
name = "grep-cli"
version = "0.1.0"
authors = ["coil398 <konayuta.sou@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
regex = "1.5.5"
grep-core = { git = "https://github.com/forcia/software-design-2020-06-grep-core.git" }
